// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit and color: inherit 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,inherit);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit and color: inherit 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,inherit);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit and color: primary 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: inherit and color: primary 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,auto);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: contrast-high 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-contrast-high));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: contrast-high 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-contrast-high));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: contrast-low 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-contrast-low));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: contrast-low 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-contrast-low));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: contrast-medium 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-contrast-medium));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: contrast-medium 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-contrast-medium));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: inherit 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,inherit);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: inherit 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,inherit);
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: primary 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: 911, safe-zone: true, size: small and color: primary 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,94px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.b68f913.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: cayenne, safe-zone: false, size: small and color: primary 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,245px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.2556201.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 35 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: cayenne, safe-zone: false, size: small and color: primary 2`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,245px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.2556201.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 35 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for model: cayenne, safe-zone: true, size: small and color: primary 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  width: var(--p-model-signature-width,245px);
  height: var(--p-model-signature-height,auto);
  color: var(--p-model-signature-color,var(--p-color-primary));
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.2556201.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 36 !important;
  background: currentcolor !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (forced-colors: active) {
  :host {
    background: CanvasText !important;
  }
}
"
`;
